# Onchain_ZK_DOC_Verify

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/zkdocauth/zk_doc_auth/: MainActivity.kt
assets/: solana-wallet-keypair.json
circuits/: .gitignore  README.md  package.json
circuits/inputs/: sample_input.json
circuits/scripts/: compile.js  generate_input.js  generate_witness.js  prove.js  setup.js  verify.js
circuits/src/: zk_doc_auth.circom
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: constants.dart  exceptions.dart  utils.dart
lib/crypto/: merkle_tree.dart  poseidon.dart  poseidon_constants.dart
lib/models/: models.dart
lib/providers/: providers.dart
lib/screens/: credential_screen.dart  home_screen.dart  merkle_screen.dart  proof_screen.dart  verify_screen.dart
lib/services/: credential_service.dart  proof_service.dart  solana_service.dart  wallet_service.dart
lib/ui/: theme.dart  widgets.dart
solana_program/: Anchor.toml  Cargo.toml
solana_program/idl/: zk_doc_auth.json
solana_program/programs/zk-doc-auth/: Cargo.toml
solana_program/programs/zk-doc-auth/src/: errors.rs  events.rs  lib.rs  state.rs  verifier.rs
test/: widget_test.dart
web/: index.html  manifest.json
