[package]
name = "zk-doc-auth"
version = "0.1.0"
description = "ZK-DocAuth: Zero Knowledge Document Authentication on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_doc_auth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
